@@ -1,7 +1,7 @@
 Primary Development of this can be blamed on
 ------------------------------------------------
-Ben Hochstedler <hochstrb\@cs.rose-hulman.edu>  ICQ:15469308 
-Elliot Glaysher <nuriko.chan\@home.com>
+Ben Hochstedler <hochstrb@cs.rose-hulman.edu>  ICQ:15469308 
+Elliot Glaysher <eglayshe@umich.edu>
 
 Modules & other patches have been contributed by
 ------------------------------------------------
